<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="5dp">

    <!-- Static background layer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_marker"
            app:tint="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove"/>

    </LinearLayout>

    <!-- swipeable content layer -->
    <LinearLayout
        android:id="@+id/swipe_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="-100dp"
        android:layout_marginEnd="-100dp">

        <!-- left swipe gradient -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/gradient_left" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_weight="1">

            <!-- Default layout -->
            <LinearLayout
                android:id="@+id/location_default"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center|start"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:text="Oslo, Norway"/>

                <ImageView
                    android:id="@+id/iv_cloud"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/level_list_cloud"
                    android:layout_marginEnd="10dp" />

                <ImageView
                    android:id="@+id/iv_rain"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/level_list_rain"
                    android:layout_marginEnd="10dp" />

                <ImageView
                    android:id="@+id/iv_temp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/level_list_temp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <!-- Expanded layout -->
            <LinearLayout
                android:id="@+id/location_expanded"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_below="@id/location_default"
                tools:visibility="visible">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>



                <TextView
                    android:id="@+id/tv_clouds"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    tools:text="20%"/>

                <TextView
                    android:id="@+id/tv_rain"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    tools:text="3 mm"/>

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="center"
                    tools:text="0°C"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/arrow_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand"
                android:layout_below="@id/location_expanded" />

        </RelativeLayout>

        <!-- right swipe gradient -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/gradient_right" />

    </LinearLayout>



</androidx.cardview.widget.CardView>