<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/locationsView"
        android:title="@string/favourites"
        android:icon="@drawable/ic_heartfilled"/>

    <item
        android:id="@+id/mapView"
        android:title="@string/map"
        android:icon="@drawable/ic_sun_y"/>

    <item
        android:id="@+id/settingsView"
        android:title="@string/settings"
        android:icon="@drawable/ic_cog"/>

</menu>